# FoxiiSimulator

./: CMakeLists.txt  README.md
src/: dialog_manager.cpp  dialog_manager.hpp  game.cpp  game.hpp  game_manager.cpp  game_manager.hpp  input_manager.hpp  main.cpp
